# PySAIC

./: LICENSE  pyproject.toml
gamedata/scripts/: chernobyl_relay_chat.script
res/: localization.xml
src/pysaic/: colors.py  config.py  config.yml  entities.py  enums.py  handlers.py  main.py  settings.py  state.py
src/pysaic/controllers/: game.py
src/pysaic/controllers/ui/: user_list.py
src/pysaic/crc_strings/: use_case.py
src/pysaic/events/: enum.py
src/pysaic/log/: __init__.py  handlers.py  utils.py
src/pysaic/script_reader/: aiowatch.py  entities.py  parser.py
src/pysaic/tasks/: incoming_queue.py  look_for_game.py  outgoing_queue.py  prepare_game_input.py  update_checker.py
src/pysaic/ui/: app.py  config.yml  mock_ui.py  options.py  server.yml
src/pysaic/use_cases/: common.py  game.py
src/pysaic/use_cases/ui/: add_dm_message.py  command.py  incoming_event.py  mode_change.py  money_transfer.py  our_message.py  our_priv_message.py  update_users.py  use_case.py  utils.py
src/pysaic/use_cases/ui/tests/: test_mode_change.py
